--- a/src/app/afficher-client/afficher-client.page.html
+++ b/src/app/afficher-client/afficher-client.page.html
@@ -15,7 +15,6 @@
       <ion-icon name="clipboard"></ion-icon>
     </ion-fab-button>
   </div>
-
   <ion-button (click)="changerPhoto('galerie')" color="tertiary" expand="block"
     (click)="imageChange=true; estChange=true">
     <ion-icon name="image" slot="start"></ion-icon>
@@ -37,105 +36,100 @@
       <ion-textarea formControlName="numeroTVAForm" type="text" inputmode="text" (change)="estChange=true">
       </ion-textarea>
     </ion-item>
-    
+    <ion-item>
+      <ion-label position="floating">Page web</ion-label>
+      <ion-textarea formControlName="siteWebForm" (change)="estChange=true"></ion-textarea>
+      <ion-fab-button *ngIf="client.siteWeb" slot="end" (click)="openBrowser(client.siteWeb)">
+        <ion-icon name="globe"></ion-icon>
+      </ion-fab-button>
+    </ion-item>
+    <ion-item>
+      <ion-label position="floating">Notes</ion-label>
+      <ion-textarea formControlName="notesForm" type="text" inputmode="text" (change)="estChange=true"></ion-textarea>
+    </ion-item>
+  </form>
+  <ion-title id='adresse'>Adresse du siège social</ion-title>
+  <ion-card *ngFor="let coordonnees1 of coordonnees">
+    <ion-item-sliding>
       <ion-item>
-        <ion-label position="floating">Page web</ion-label>
-        <ion-textarea formControlName="siteWebForm" (change)="estChange=true"></ion-textarea>
-        <ion-fab-button *ngIf="client.siteWeb" slot="end" (click)="openBrowser(client.siteWeb)">
-          <ion-icon name="globe"></ion-icon>
+        <ion-item>
+          <ion-label position="floating">Pays</ion-label>
+          <ion-input [(ngModel)]='coordonnees1.pays' type="text" inputmode="text" (change)="estChange=true"></ion-input>
+        </ion-item>
+        <ion-item>
+          <ion-label position="floating">Province</ion-label>
+          <ion-input [(ngModel)]='coordonnees1.province' type="text" inputmode="text" (change)="estChange=true">
+          </ion-input>
+        </ion-item>
+      </ion-item>
+      <ion-item>
+        <ion-item>
+          <ion-label position="floating">Localité</ion-label>
+          <ion-input [(ngModel)]='coordonnees1.localite' type="text" inputmode="text" (change)="estChange=true">
+          </ion-input>
+        </ion-item>
+        <ion-item>
+          <ion-label position="floating">Code postal</ion-label>
+          <ion-input [(ngModel)]='coordonnees1.codePostal' type="text" inputmode="text" (change)="estChange=true">
+          </ion-input>
+        </ion-item>
+      </ion-item>
+      <ion-item>
+        <ion-item>
+          <ion-label position="floating">Rue</ion-label>
+          <ion-input [(ngModel)]='coordonnees1.rue' type="text" inputmode="text" (change)="estChange=true"></ion-input>
+        </ion-item>
+        <ion-item>
+          <ion-label position="floating">Numéro</ion-label>
+          <ion-input [(ngModel)]='coordonnees1.numero' type="text" inputmode="text" (change)="estChange=true">
+          </ion-input>
+        </ion-item>
+        <ion-item>
+          <ion-label position="floating">Boite</ion-label>
+          <ion-input [(ngModel)]='coordonnees1.boite' type="text" inputmode="text" (change)="estChange=true"></ion-input>
+        </ion-item>
+      </ion-item>
+      <ion-item>
+        <ion-label position="floating">Numéro de téléphone</ion-label>
+        <ion-input [(ngModel)]='coordonnees1.numeroTelephone' type="text" inputmode="text" (change)="estChange=true">
+        </ion-input>
+        <ion-fab-button *ngIf="coordonnees1.numeroTelephone" slot="end" (click)="appeler(coordonnees1.numeroTelephone)">
+          <ion-icon name="call"></ion-icon>
+        </ion-fab-button>
+      </ion-item>
+      <ion-item>
+        <ion-label position="floating">Numéro de GSM</ion-label>
+        <ion-input [(ngModel)]='coordonnees1.numeroGSM' type="text" inputmode="text" (change)="estChange=true">
+        </ion-input>
+        <ion-fab-button *ngIf="coordonnees1.numeroGSM" slot="end" (click)="appeler(coordonnees1.numeroGSM)">
+          <ion-icon name="call"></ion-icon>
+        </ion-fab-button>
+        <ion-fab-button *ngIf="coordonnees1.numeroGSM" slot="end" (click)="envoyerSMS(coordonnees1.numeroGSM)">
+          <ion-icon name="phone-portrait"></ion-icon>
+        </ion-fab-button>
+      </ion-item>
+      <ion-item>
+        <ion-label position="floating">Numéro de Fax</ion-label>
+        <ion-input [(ngModel)]='coordonnees1.numeroFax' type="text" inputmode="text" (change)="estChange=true">
+        </ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label position="floating">Adresse email</ion-label>
+        <ion-input [(ngModel)]='coordonnees1.email' type="text" inputmode="text" (change)="estChange=true"></ion-input>
+        <ion-fab-button *ngIf="coordonnees1.email" slot="end" href="mailto:{{coordonnees1.email}}">
+          <ion-icon name="mail"></ion-icon>
         </ion-fab-button>
       </ion-item>
       <ion-item>
         <ion-label position="floating">Page LinkedIn</ion-label>
-        <ion-textarea formControlName="linkedInForm" (change)="estChange=true"></ion-textarea>
-        <ion-fab-button *ngIf="client.linkedIn" slot="end" (click)="openBrowser(client.linkedIn)">
+        <ion-input [(ngModel)]='coordonnees1.linkedIn' type="text" inputmode="text" (change)="estChange=true"></ion-input>
+        <ion-fab-button *ngIf="coordonnees1.linkedIn" slot="end" (click)="openBrowser(coordonnees1.linkedIn)">
           <ion-icon name="logo-linkedin"></ion-icon>
         </ion-fab-button>
       </ion-item>
-      <ion-item>
-        <ion-label position="floating">Notes</ion-label>
-        <ion-textarea formControlName="notesForm" type="text" inputmode="text" (change)="estChange=true"></ion-textarea>
-      </ion-item>
-  </form>
-
-   <ion-title id='adresse'>Adresse du siège social</ion-title>
-   <ion-card *ngFor="let coordonnees1 of coordonnees">
-    <ion-item-sliding>
-  <ion-item>
-    <ion-item>
-      <ion-label position="floating">Pays</ion-label>
-      <ion-input [(ngModel)]='coordonnees1.pays' type="text" inputmode="text" (change)="estChange=true"></ion-input>
-    </ion-item>
-    <ion-item>
-      <ion-label position="floating">Province</ion-label>
-      <ion-input [(ngModel)]='coordonnees1.province' type="text" inputmode="text" (change)="estChange=true"></ion-input>
-    </ion-item>
-  </ion-item>
-
- 
-  <ion-item>
-
-    <ion-item>
-      <ion-label position="floating">Localité</ion-label>
-      <ion-input [(ngModel)]='coordonnees.localite' type="text" inputmode="text" (change)="estChange=true"></ion-input>
-     
-    </ion-item>
-    <ion-item>
-      <ion-label position="floating">Code postal</ion-label>
-      <ion-input [(ngModel)]='coordonnees.codePostal' type="text" inputmode="text" (change)="estChange=true">
-      </ion-input>
-    </ion-item>
-  </ion-item>
-  <ion-item>
-
-    <ion-item>
-      <ion-label position="floating">Rue</ion-label>
-      <ion-input [(ngModel)]='coordonnees.rue' type="text" inputmode="text" (change)="estChange=true"></ion-input>
-    </ion-item>
-    <ion-item>
-      <ion-label position="floating">Numéro</ion-label>
-      <ion-input [(ngModel)]='coordonnees.numero' type="text" inputmode="text" (change)="estChange=true"></ion-input>
-
-    </ion-item>
-    <ion-item>
-      <ion-label position="floating">Boite</ion-label>
-      <ion-input [(ngModel)]='coordonnees.boite' type="text" inputmode="text" (change)="estChange=true"></ion-input>
-
-    </ion-item>
-  </ion-item>
-
-<ion-item>
-  <ion-label position="floating">Numéro de téléphone</ion-label>
-  <ion-input [(ngModel)]='coordonnees.numeroTelephone' type="text" inputmode="text" (change)="estChange=true">
-  </ion-input>
-  <ion-fab-button *ngIf="coordonnees.numeroTelephone" slot="end" (click)="appeler(coordonnees.numeroTelephone)">
-    <ion-icon name="call"></ion-icon>
-  </ion-fab-button>
-  </ion-item>
-  <ion-item>
-    <ion-label position="floating">Numéro de GSM</ion-label>
-    <ion-input [(ngModel)]='coordonnees.numeroGSM' type="text" inputmode="text" (change)="estChange=true"></ion-input>
-    <ion-fab-button *ngIf="coordonnees.numeroGSM" slot="end" (click)="appeler(coordonnees.numeroGSM)">
-      <ion-icon name="call"></ion-icon>
-    </ion-fab-button>
-    <ion-fab-button *ngIf="coordonnees.numeroGSM" slot="end" (click)="envoyerSMS(coordonnees.numeroGSM)">
-      <ion-icon name="phone-portrait"></ion-icon>
-    </ion-fab-button>
-  </ion-item>
-  <ion-item>
-    <ion-label position="floating">Numéro de Fax</ion-label>
-    <ion-input [(ngModel)]='coordonnees.numeroFax' type="text" inputmode="text" (change)="estChange=true"></ion-input>
-  </ion-item>
-  <ion-item>
-    <ion-label position="floating">Adresse email</ion-label>
-    <ion-input [(ngModel)]='coordonnees.email' type="text" inputmode="text" (change)="estChange=true"></ion-input>
-    <ion-fab-button *ngIf="coordonnees.email" slot="end" href="mailto:{{coordonnees.email}}">
-      <ion-icon name="mail"></ion-icon>
-    </ion-fab-button>
-  </ion-item>
-</ion-item-sliding>
-</ion-card>
-
+    </ion-item-sliding>
+    <ion-item></ion-item>
+  </ion-card>
   <ion-fab vertical="bottom" horizontal="start" slot="fixed">
     <ion-fab-button color="danger" (click)="RemoveClient(client)">
       <ion-icon name="trash"></ion-icon>
