--- a/src/app/ajouter-client/ajouter-client.page.html
+++ b/src/app/ajouter-client/ajouter-client.page.html
@@ -91,7 +91,7 @@
   </ion-item>
   <ion-item>
     <ion-label position="floating">Page LinkedIn</ion-label>
-    <ion-input [(ngModel)]='client.linkedIn'></ion-input>
+    <ion-input [(ngModel)]='coordonnees.linkedIn'></ion-input>
   </ion-item>
   <ion-item>
     <ion-label position="floating">Notes</ion-label>
