--- a/src/app/tabs/commandes/commandes.page.html
+++ b/src/app/tabs/commandes/commandes.page.html
@@ -18,10 +18,21 @@
     </ion-fab-button>
   </ion-fab>
   <ion-list>
+
     <ion-item  *ngFor="let commande of commandes" >
-      <ion-label routerLink="/afficher-commande" (click)="versVueCommande(commande)">{{commande.numeroCommande}}</ion-label>
-      <ion-label><ion-button (click)="choixCommandesModal(commande.keyClient,commande.pseudoClient)">{{commande.nomClient}}</ion-button></ion-label>
-      <ion-label slot="end">{{commande.dateCommande | date: 'dd MMMM yyyy'}}</ion-label>
+    <ion-item-sliding>
+
+      <ion-item routerLink="/afficher-commande" (click)="versVueCommande(commande)">
+      <ion-item>{{commande.numeroCommande}}</ion-item>
+      <ion-item>{{commande.nomClient}}</ion-item>
+      <ion-item slot="end">{{commande.dateCommande | date: 'dd MMMM yyyy'}}</ion-item>
+    </ion-item>
+  </ion-item-sliding>
+    
+      <ion-fab-button slot="end" (click)="choixCommandesModal(commande.keyClient,commande.pseudoClient)" >
+        <ion-icon name="clipboard" ></ion-icon>
+      </ion-fab-button>
+    
     </ion-item>
   </ion-list>
 </ion-content>
