--- a/src/app/tabs/clients/clients.page.html
+++ b/src/app/tabs/clients/clients.page.html
@@ -14,7 +14,7 @@
 <ion-content>
   <ion-fab id='ajouter' routerLink="/ajouter-client" vertical="bottom" horizontal="end" slot="fixed">
     <ion-fab-button>
-      <ion-icon name="person-add"></ion-icon>
+      <ion-icon name="add-circle"></ion-icon>
     </ion-fab-button>
   </ion-fab>
   <ion-list>
