--- a/src/app/afficher-client/afficher-client.page.html
+++ b/src/app/afficher-client/afficher-client.page.html
@@ -55,81 +55,81 @@
     </ion-item>
   </form>
   <ion-title id='adresse'>Adresse du siège social</ion-title>
-  <ion-card *ngFor="let coordonnees1 of coordonnees">
+  <ion-card >
     <ion-item-sliding>
       <ion-item>
         <ion-item>
           <ion-label position="floating">Pays</ion-label>
-          <ion-input [(ngModel)]='coordonnees1.pays' type="text" inputmode="text" (change)="estChange=true"></ion-input>
+          <ion-input [(ngModel)]='coordonnees.pays' type="text" inputmode="text" (change)="estChange=true"></ion-input>
         </ion-item>
         <ion-item>
           <ion-label position="floating">Province</ion-label>
-          <ion-input [(ngModel)]='coordonnees1.province' type="text" inputmode="text" (change)="estChange=true">
+          <ion-input [(ngModel)]='coordonnees.province' type="text" inputmode="text" (change)="estChange=true">
           </ion-input>
         </ion-item>
       </ion-item>
       <ion-item>
         <ion-item>
           <ion-label position="floating">Localité</ion-label>
-          <ion-input [(ngModel)]='coordonnees1.localite' type="text" inputmode="text" (change)="estChange=true">
+          <ion-input [(ngModel)]='coordonnees.localite' type="text" inputmode="text" (change)="estChange=true">
           </ion-input>
         </ion-item>
         <ion-item>
           <ion-label position="floating">Code postal</ion-label>
-          <ion-input [(ngModel)]='coordonnees1.codePostal' type="text" inputmode="text" (change)="estChange=true">
+          <ion-input [(ngModel)]='coordonnees.codePostal' type="text" inputmode="text" (change)="estChange=true">
           </ion-input>
         </ion-item>
       </ion-item>
       <ion-item>
         <ion-item>
           <ion-label position="floating">Rue</ion-label>
-          <ion-input [(ngModel)]='coordonnees1.rue' type="text" inputmode="text" (change)="estChange=true"></ion-input>
+          <ion-input [(ngModel)]='coordonnees.rue' type="text" inputmode="text" (change)="estChange=true"></ion-input>
         </ion-item>
         <ion-item>
           <ion-label position="floating">Numéro</ion-label>
-          <ion-input [(ngModel)]='coordonnees1.numero' type="text" inputmode="text" (change)="estChange=true">
+          <ion-input [(ngModel)]='coordonnees.numero' type="text" inputmode="text" (change)="estChange=true">
           </ion-input>
         </ion-item>
         <ion-item>
           <ion-label position="floating">Boite</ion-label>
-          <ion-input [(ngModel)]='coordonnees1.boite' type="text" inputmode="text" (change)="estChange=true"></ion-input>
+          <ion-input [(ngModel)]='coordonnees.boite' type="text" inputmode="text" (change)="estChange=true"></ion-input>
         </ion-item>
       </ion-item>
       <ion-item>
         <ion-label position="floating">Numéro de téléphone</ion-label>
-        <ion-input [(ngModel)]='coordonnees1.numeroTelephone' type="text" inputmode="text" (change)="estChange=true">
+        <ion-input [(ngModel)]='coordonnees.numeroTelephone' type="text" inputmode="text" (change)="estChange=true">
         </ion-input>
-        <ion-fab-button *ngIf="coordonnees1.numeroTelephone" slot="end" (click)="appeler(coordonnees1.numeroTelephone)">
+        <ion-fab-button *ngIf="coordonnees.numeroTelephone" slot="end" (click)="appeler(coordonnees.numeroTelephone)">
           <ion-icon name="call"></ion-icon>
         </ion-fab-button>
       </ion-item>
       <ion-item>
         <ion-label position="floating">Numéro de GSM</ion-label>
-        <ion-input [(ngModel)]='coordonnees1.numeroGSM' type="text" inputmode="text" (change)="estChange=true">
+        <ion-input [(ngModel)]='coordonnees.numeroGSM' type="text" inputmode="text" (change)="estChange=true">
         </ion-input>
-        <ion-fab-button *ngIf="coordonnees1.numeroGSM" slot="end" (click)="appeler(coordonnees1.numeroGSM)">
+        <ion-fab-button *ngIf="coordonnees.numeroGSM" slot="end" (click)="appeler(coordonnees.numeroGSM)">
           <ion-icon name="call"></ion-icon>
         </ion-fab-button>
-        <ion-fab-button *ngIf="coordonnees1.numeroGSM" slot="end" (click)="envoyerSMS(coordonnees1.numeroGSM)">
+        <ion-fab-button *ngIf="coordonnees.numeroGSM" slot="end" (click)="envoyerSMS(coordonnees.numeroGSM)">
           <ion-icon name="phone-portrait"></ion-icon>
         </ion-fab-button>
       </ion-item>
       <ion-item>
         <ion-label position="floating">Numéro de Fax</ion-label>
-        <ion-input [(ngModel)]='coordonnees1.numeroFax' type="text" inputmode="text" (change)="estChange=true">
+        <ion-input [(ngModel)]='coordonnees.numeroFax' type="text" inputmode="text" (change)="estChange=true">
         </ion-input>
       </ion-item>
       <ion-item>
         <ion-label position="floating">Adresse email</ion-label>
-        <ion-input [(ngModel)]='coordonnees1.email' type="text" inputmode="text" (change)="estChange=true"></ion-input>
-        <ion-fab-button *ngIf="coordonnees1.email" slot="end" href="mailto:{{coordonnees1.email}}">
+        <ion-input [(ngModel)]='coordonnees.email' type="text" inputmode="text" (change)="estChange=true"></ion-input>
+        <ion-fab-button *ngIf="coordonnees.email" slot="end" href="mailto:{{coordonnees.email}}">
           <ion-icon name="mail"></ion-icon>
         </ion-fab-button>
       </ion-item>
       <ion-item>
         <ion-label position="floating">Page LinkedIn</ion-label>
-        <ion-input [(ngModel)]='coordonnees1.linkedIn' type="text" inputmode="text" (change)="estChange=true"></ion-input>
-        <ion-fab-button *ngIf="coordonnees1.linkedIn" slot="end" (click)="openBrowser(coordonnees1.linkedIn)">
+        <ion-input [(ngModel)]='coordonnees.linkedIn' type="text" inputmode="text" (change)="estChange=true"></ion-input>
+        <ion-fab-button *ngIf="coordonnees.linkedIn" slot="end" (click)="openBrowser(coordonnees.linkedIn)">
           <ion-icon name="logo-linkedin"></ion-icon>
         </ion-fab-button>
       </ion-item>
