--- a/src/app/modals/modal-contact/modal-contact.page.html
+++ b/src/app/modals/modal-contact/modal-contact.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>modal-contact</ion-title>
+    <ion-title id="titre">{{contact.nom}}</ion-title>
   </ion-toolbar>
  
 </ion-header>
@@ -70,20 +70,20 @@
         <ion-label position="floating">Numéro de téléphone</ion-label>
         <ion-input [(ngModel)]='coordonnees.numeroTelephone' type="text" inputmode="text" (change)="estChange=true">
         </ion-input>
-        <!-- <ion-fab-button *ngIf="contact.numeroTelephone" slot="end" (click)="appeler(contact.numeroTelephone)"> -->
-          <!-- <ion-icon name="call"></ion-icon> -->
-        <!-- </ion-fab-button> -->
+        <ion-fab-button *ngIf="coordonnees.numeroTelephone && !vide" slot="end" (click)="appeler(coordonnees.numeroTelephone)">
+          <ion-icon name="call"></ion-icon>
+        </ion-fab-button>
       </ion-item>
       <ion-item>
         <ion-label position="floating">Numéro de GSM</ion-label>
         <ion-input [(ngModel)]='coordonnees.numeroGSM' type="text" inputmode="text" (change)="estChange=true">
         </ion-input>
-        <!-- <ion-fab-button *ngIf="contact.numeroGSM" slot="end" (click)="appeler(contact.numeroGSM)"> -->
-          <!-- <ion-icon name="call"></ion-icon> -->
-        <!-- </ion-fab-button> -->
-        <!-- <ion-fab-button *ngIf="contact.numeroGSM" slot="end" (click)="envoyerSMS(contact.numeroGSM)"> -->
-          <!-- <ion-icon name="phone-portrait"></ion-icon> -->
-        <!-- </ion-fab-button> -->
+        <ion-fab-button *ngIf="coordonnees.numeroGSM && !vide" slot="end" (click)="appeler(coordonnees.numeroGSM)">
+          <ion-icon name="call"></ion-icon>
+        </ion-fab-button>
+        <ion-fab-button *ngIf="coordonnees.numeroGSM && !vide" slot="end" (click)="envoyerSMS(coordonnees.numeroGSM)">
+          <ion-icon name="phone-portrait"></ion-icon>
+        </ion-fab-button>
       </ion-item>
       <ion-item>
         <ion-label position="floating">Numéro de Fax</ion-label>
@@ -93,20 +93,20 @@
       <ion-item>
         <ion-label position="floating">Adresse email</ion-label>
         <ion-input [(ngModel)]='coordonnees.email' type="text" inputmode="text" (change)="estChange=true"></ion-input>
-        <!-- <ion-fab-button *ngIf="contact.email" slot="end" href="mailto:{{contact.email}}"> -->
-          <!-- <ion-icon name="mail"></ion-icon> -->
-        <!-- </ion-fab-button> -->
+        <ion-fab-button *ngIf="coordonnees.email && !vide" slot="end" href="mailto:{{coordonnees.email}}">
+          <ion-icon name="mail"></ion-icon>
+        </ion-fab-button>
       </ion-item>
       <ion-item>
         <ion-label position="floating">Page LinkedIn</ion-label>
         <ion-input [(ngModel)]='coordonnees.linkedIn' type="text" inputmode="text" (change)="estChange=true"></ion-input>
-        <!-- <ion-fab-button *ngIf="contact.linkedIn" slot="end" (click)="openBrowser(contact.linkedIn)"> -->
-          <!-- <ion-icon name="logo-linkedin"></ion-icon> -->
-        <!-- </ion-fab-button> -->
+        <ion-fab-button *ngIf="coordonnees.linkedIn && !vide" slot="end" (click)="openBrowser(coordonnees.linkedIn)">
+          <ion-icon name="logo-linkedin"></ion-icon>
+        </ion-fab-button>
       </ion-item>
     </ion-item-sliding>
     <ion-item></ion-item>
-    <ion-button (click)="ajoutContact(contact)" expand="block" color="primary">
+    <ion-button *ngIf="vide" (click)="ajoutContact(contact)" expand="block" color="primary">
       <ion-icon name="checkmark"></ion-icon>Ajouter
     </ion-button>
 </ion-content>
