--- a/src/app/modals/modal-commandes/modal-commandes.page.html
+++ b/src/app/modals/modal-commandes/modal-commandes.page.html
@@ -1,6 +1,13 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Liste des commandes de {{pseudoClient}}</ion-title>
+    <ion-title id="titre">Liste des commandes de {{pseudoClient}}</ion-title>
+    <ion-buttons slot="end">
+      <ion-button (click)="closeModal()">
+        <ion-icon slot="icon-only" name="close"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+
+
   </ion-toolbar>
 </ion-header>
 <ion-content>
