--- a/src/app/modals/modal-liste-contacts/modal-liste-contacts.page.html
+++ b/src/app/modals/modal-liste-contacts/modal-liste-contacts.page.html
@@ -1,6 +1,11 @@
 <ion-header>
   <ion-toolbar>
     <ion-title id="titre">Liste de contacts</ion-title>
+    <ion-buttons slot="end">
+      <ion-button (click)="closeModal()">
+        <ion-icon slot="icon-only" name="close"></ion-icon>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 <ion-item>
   <ion-fab-button slot="end" (click)="vide=true; contactModal(keyEntreprise,vide,contact)">
