--- a/src/app/ajouter-commande/ajouter-commande.page.html
+++ b/src/app/ajouter-commande/ajouter-commande.page.html
@@ -28,34 +28,34 @@
   </ion-item>
   <ion-card *ngFor="let commandeProduit of commandesProduits">
     <ion-item-sliding>
-      <ion-item>
-        <ion-label slot="start">{{commandeProduit.produitNom}}</ion-label>
-        <ion-note slot="start">
+    <ion-title id='titre'>{{commandeProduit.produitNom}}</ion-title>
+      <ion-item>        
+        <ion-note>
           <ion-label position="floating">Quantité</ion-label>
           <ion-textarea [(ngModel)]='commandeProduit.quantite' type="number" inputmode="number"
             (change)="calculPrix(commandeProduit)">
           </ion-textarea>
         </ion-note>
-        <ion-note slot="end">
+        <ion-note>
           <ion-label position="floating">Prix</ion-label>
           <ion-textarea [(ngModel)]='commandeProduit.prix' type="number" inputmode="number"
             (change)="calculPrix(commandeProduit)">
           </ion-textarea>
         </ion-note>
-        <ion-note slot="end">
+        <ion-note>
           <ion-label position="floating">Réduction en %</ion-label>
           <ion-textarea [(ngModel)]='commandeProduit.pourcentageProduit' type="number" inputmode="number"
             (change)="calculPrix(commandeProduit)">
           </ion-textarea>
         </ion-note>
-        <ion-note slot="end">
+        <ion-note>
           <ion-label position="floating">Total HTVA</ion-label>
           <p></p>
           <ion-label>
             {{((commandeProduit.prix*commandeProduit.quantite-((commandeProduit.prix*commandeProduit.quantite)*commandeProduit.pourcentageProduit/100)).toFixed(2)).replace('.',',')}}
           </ion-label>
         </ion-note>
-        <ion-note slot="end">
+        <ion-note>
           <ion-label position="floating">TVA</ion-label>
           <p></p>
           <ion-label>{{commandeProduit.TVAProduit}} %</ion-label>
