--- a/src/app/tabs/produits/produits.page.scss
+++ b/src/app/tabs/produits/produits.page.scss
@@ -7,3 +7,11 @@
 .deconnexion { 
     float: right;
   }
+  #segment{
+    font-size: small;
+}
+.small-caps {     
+    font-size: 13px; 
+    font-weight:bold;
+    //text-decoration-color: red;
+}
