--- a/src/app/ajouter-client/ajouter-client.page.html
+++ b/src/app/ajouter-client/ajouter-client.page.html
@@ -3,7 +3,7 @@
     <ion-buttons id='retourclients' slot="start">
       <ion-back-button defaultHref="/tabs/clients" text=""></ion-back-button>
     </ion-buttons>
-    <ion-title id='titre'>Ajouter un client</ion-title>
+    <ion-title id='titre'>Ajouter un {{entreprise}}</ion-title>
   </ion-toolbar>
 </ion-header>
 <ion-content>
