--- a/src/app/tabs/commandes/commandes.page.scss
+++ b/src/app/tabs/commandes/commandes.page.scss
@@ -11,3 +11,10 @@
 .deconnexion { 
   float: right;
 }
+.nom{
+ // margin-top: 15px;
+  // margin-bottom: 15px;
+  width: 30%;
+  // margin-left: auto;
+  // margin-right: auto;
+}
