--- a/src/app/tabs/produits/produits.page.html
+++ b/src/app/tabs/produits/produits.page.html
@@ -50,6 +50,7 @@
         <!-- (ionError)="imageDefaut($event)" -->
       </ion-thumbnail>
       <ion-label>{{produit.nom}}</ion-label>
+      <ion-label>{{produit.quantite}}</ion-label>
     </ion-item>
   </ion-list>
 </ion-content>
