--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -9,7 +9,7 @@
 
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="commandes">
-      <ion-icon name="file-tray-full"></ion-icon>
+      <ion-icon name="document"></ion-icon>
       <ion-label>Commandes</ion-label>
     </ion-tab-button>
 
