--- a/src/app/afficher-produit/afficher-produit.page.html
+++ b/src/app/afficher-produit/afficher-produit.page.html
@@ -15,6 +15,15 @@
     <ion-icon name="image" slot="start"></ion-icon>
     Changer l'image
   </ion-button>
+  
+  <ion-item (click)="choixFournisseurModal()">
+    <ion-label color='primary'>Changer de fournisseur</ion-label>
+  </ion-item>
+  <ion-item>
+    <ion-label position="floating">Fournisseur</ion-label>
+    <ion-textarea [(ngModel)]="fournisseur.nom" type="text" inputmode="text"></ion-textarea>
+  </ion-item>
+
   <form [formGroup]="form" novalidate>
     <ion-item>
       <ion-label position="floating">Code Produit</ion-label>
