--- a/src/app/ajouter-commande/ajouter-commande.page.html
+++ b/src/app/ajouter-commande/ajouter-commande.page.html
@@ -3,7 +3,7 @@
     <ion-buttons id='retourclients' slot="start">
       <ion-back-button defaultHref="/tabs/commandes" text=""></ion-back-button>
     </ion-buttons>
-    <ion-title id='titre'>Nouvelle commande</ion-title>
+    <ion-title id='titre'>Nouvelle commande {{typeCommandes}}</ion-title>
   </ion-toolbar>
 </ion-header>
 <ion-content>
