--- a/src/app/modals/modal-client/modal-client.page.html
+++ b/src/app/modals/modal-client/modal-client.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title id="titre">Liste des clients</ion-title>
+    <ion-title id="titre">Liste des {{entreprise}}</ion-title>
     <ion-buttons slot="end">
       <ion-button (click)="closeModal()">
         <ion-icon slot="icon-only" name="close"></ion-icon>
