--- a/src/app/tabs/commandes/commandes.page.html
+++ b/src/app/tabs/commandes/commandes.page.html
@@ -1,18 +1,19 @@
 <ion-header>
   <ion-toolbar color="primary">
-    <ion-title id='titre'>Liste des Commandes
+    <ion-title id='titre'>Liste des commandes {{typeCommandes}}
       <ion-button class="deconnexion" name=boutton (click)="deconnexion()" expand="block" color="primary">
         <ion-icon name="power"></ion-icon>
       </ion-button>
     </ion-title>
   </ion-toolbar>
+  <ion-toggle color="success" (ionChange)="changeCommandes()"></ion-toggle>
   <ion-toolbar>
     <ion-searchbar animated placeholder="Recherche" (ionChange)="rechercheCommande($event)">
     </ion-searchbar>
   </ion-toolbar>
 </ion-header>
 <ion-content>
-  <ion-fab id='ajouter' routerLink="/ajouter-commande" vertical="bottom" horizontal="end" slot="fixed">
+  <ion-fab id='ajouter' routerLink="/ajouter-commande" vertical="bottom" horizontal="end" slot="fixed" (click)="ajouterCommandes()">
     <ion-fab-button>
       <ion-icon name="create"></ion-icon>
     </ion-fab-button>
@@ -23,8 +24,8 @@
     <ion-item-sliding>
 
       <ion-item routerLink="/afficher-commande" (click)="versVueCommande(commande)">
-      <ion-item>{{commande.numeroCommande}}</ion-item>
-      <ion-item class="nom" slot="start">{{commande.nomClient}}</ion-item>
+        <ion-item class="nom" slot="start">{{commande.nomClient}}</ion-item>
+        <ion-item>{{commande.numeroCommande}}</ion-item>
       <ion-item>{{commande.dateCommande | date: 'dd MMMM yyyy'}}</ion-item>
     </ion-item>
   </ion-item-sliding>
