--- a/src/app/tabs/produits/produits.page.scss
+++ b/src/app/tabs/produits/produits.page.scss
@@ -15,3 +15,10 @@
     font-weight:bold;
     //text-decoration-color: red;
 }
+.nom {
+    // margin-top: 15px;
+     // margin-bottom: 15px;
+     width: 30%;
+     // margin-left: auto;
+     // margin-right: auto;
+   }
