--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -20,7 +20,7 @@
 
     <ion-tab-button tab="clients">
       <ion-icon name="business"></ion-icon>
-      <ion-label>Clients</ion-label>
+      <ion-label>Entreprises</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 
