--- a/src/app/tabs/commandes/commandes.page.html
+++ b/src/app/tabs/commandes/commandes.page.html
@@ -7,33 +7,39 @@
     </ion-title>
   </ion-toolbar>
   <ion-toggle color="success" (ionChange)="changeCommandes()"></ion-toggle>
+  <ion-button class="archive" name=boutton expand="block" color="success" (click)="versArchive()">{{typeArchive}}</ion-button>
   <ion-toolbar>
     <ion-searchbar animated placeholder="Recherche" (ionChange)="rechercheCommande($event)">
     </ion-searchbar>
   </ion-toolbar>
 </ion-header>
 <ion-content>
-  <ion-fab id='ajouter' routerLink="/ajouter-commande" vertical="bottom" horizontal="end" slot="fixed" (click)="ajouterCommandes()">
+  <ion-fab *ngIf="!archive" id='ajouter' routerLink="/ajouter-commande" vertical="bottom" horizontal="end" slot="fixed"
+    (click)="ajouterCommandes()">
     <ion-fab-button>
       <ion-icon name="create"></ion-icon>
     </ion-fab-button>
   </ion-fab>
   <ion-list>
-
-    <ion-item  *ngFor="let commande of commandes" >
-    <ion-item-sliding>
-
-      <ion-item routerLink="/afficher-commande" (click)="versVueCommande(commande)">
-        <ion-item class="nom" slot="start">{{commande.nomClient}}</ion-item>
-        <ion-item>{{commande.numeroCommande}}</ion-item>
-      <ion-item>{{commande.dateCommande | date: 'dd MMMM yyyy'}}</ion-item>
-    </ion-item>
-  </ion-item-sliding>
-    
-      <ion-fab-button slot="end" (click)="choixCommandesModal(commande.keyClient,commande.pseudoClient)" >
-        <ion-icon name="clipboard" ></ion-icon>
+    <ion-item *ngFor="let commande of commandes">
+      <ion-item-sliding>
+        <ion-item routerLink="/afficher-commande" (click)="versVueCommande(commande)">
+          <ion-item class="nom" slot="start">{{commande.nomClient}}</ion-item>
+          <ion-item>{{commande.numeroCommande}}</ion-item>
+          <ion-item>{{commande.dateCommande | date: 'dd MMMM yyyy'}}</ion-item>
+        </ion-item>
+        <ion-item-options  side="start">
+          <ion-item-option *ngIf="!archive"  color="success" (click)="archiverCommande(commande,1)">
+            <ion-icon name="archive" slot="icon-only"></ion-icon>
+          </ion-item-option>
+          <ion-item-option *ngIf="archive" color="danger" (click)="archiverCommande(commande,0)">
+            <ion-icon name="arrow-back" slot="icon-only"></ion-icon>
+          </ion-item-option>
+        </ion-item-options>
+      </ion-item-sliding>
+      <ion-fab-button slot="end" (click)="choixCommandesModal(commande.keyClient,commande.pseudoClient)">
+        <ion-icon name="clipboard"></ion-icon>
       </ion-fab-button>
-    
     </ion-item>
   </ion-list>
 </ion-content>
