--- a/src/app/tabs/commandes/commandes.page.html
+++ b/src/app/tabs/commandes/commandes.page.html
@@ -21,9 +21,9 @@
     </ion-fab-button>
   </ion-fab>
   <ion-list>
-    <ion-item *ngFor="let commande of commandes">
+    <ion-item [color]='color' *ngFor="let commande of commandes">
       <ion-item-sliding>
-        <ion-item routerLink="/afficher-commande" (click)="versVueCommande(commande)">
+        <ion-item [color]='color' routerLink="/afficher-commande" (click)="versVueCommande(commande)">
           <ion-item class="nom" slot="start">{{commande.nomClient}}</ion-item>
           <ion-item>{{commande.numeroCommande}}</ion-item>
           <ion-item>{{commande.dateCommande | date: 'dd MMMM yyyy'}}</ion-item>
@@ -41,5 +41,11 @@
         <ion-icon name="clipboard"></ion-icon>
       </ion-fab-button>
     </ion-item>
+
+     <!-- <ion-item-options side="end">
+      <ion-item-option color="success"></ion-item-option>
+    </ion-item-options> -->
+
+
   </ion-list>
 </ion-content>
