--- a/src/app/tabs/commandes/commandes.page.html
+++ b/src/app/tabs/commandes/commandes.page.html
@@ -6,7 +6,9 @@
       </ion-button>
     </ion-title>
   </ion-toolbar>
-  <ion-toggle color="success" (ionChange)="changeCommandes()"></ion-toggle>
+  <ion-label class="typeCommandes">Clients</ion-label>
+  <ion-toggle color="success" (ionChange)="changeCommandes()"> </ion-toggle>
+  <ion-label class="typeCommandes">Fournisseurs</ion-label>
   <ion-button class="archive" name=boutton expand="block" color="success" (click)="versArchive()">{{typeArchive}}</ion-button>
   <ion-toolbar>
     <ion-searchbar animated placeholder="Recherche" (ionChange)="rechercheCommande($event)">
@@ -21,18 +23,18 @@
     </ion-fab-button>
   </ion-fab>
   <ion-list>
-    <ion-item [color]='color' *ngFor="let commande of commandes">
+    <ion-item color='{{commande.commandeFacturee}}' *ngFor="let commande of commandes">
       <ion-item-sliding>
-        <ion-item [color]='color' routerLink="/afficher-commande" (click)="versVueCommande(commande)">
+        <ion-item color='{{commande.commandeFacturee}}' routerLink="/afficher-commande" (click)="versVueCommande(commande)">
           <ion-item class="nom" slot="start">{{commande.nomClient}}</ion-item>
           <ion-item>{{commande.numeroCommande}}</ion-item>
           <ion-item>{{commande.dateCommande | date: 'dd MMMM yyyy'}}</ion-item>
         </ion-item>
         <ion-item-options  side="start">
-          <ion-item-option *ngIf="!archive"  color="success" (click)="archiverCommande(commande,1)">
+          <ion-item-option *ngIf="!archive"  color="success" (click)="archiverCommande(commande,1,'warning')">
             <ion-icon name="archive" slot="icon-only"></ion-icon>
           </ion-item-option>
-          <ion-item-option *ngIf="archive" color="danger" (click)="archiverCommande(commande,0)">
+          <ion-item-option *ngIf="archive" color="danger" (click)="archiverCommande(commande,0,'')">
             <ion-icon name="arrow-back" slot="icon-only"></ion-icon>
           </ion-item-option>
         </ion-item-options>
