--- a/src/app/tabs/commandes/commandes.page.html
+++ b/src/app/tabs/commandes/commandes.page.html
@@ -9,7 +9,8 @@
   <ion-label class="typeCommandes">Clients</ion-label>
   <ion-toggle color="success" (ionChange)="changeCommandes()"> </ion-toggle>
   <ion-label class="typeCommandes">Fournisseurs</ion-label>
-  <ion-button class="archive" name=boutton expand="block" color="success" (click)="versArchive()">{{typeArchive}}</ion-button>
+  <ion-button class="archive" name=boutton expand="block" color="success" (click)="versArchive()">{{typeArchive}}
+  </ion-button>
   <ion-toolbar>
     <ion-searchbar animated placeholder="Recherche" (ionChange)="rechercheCommande($event)">
     </ion-searchbar>
@@ -25,13 +26,14 @@
   <ion-list>
     <ion-item color='{{commande.commandeFacturee}}' *ngFor="let commande of commandes">
       <ion-item-sliding>
-        <ion-item color='{{commande.commandeFacturee}}' routerLink="/afficher-commande" (click)="versVueCommande(commande)">
+        <ion-item color='{{commande.commandeFacturee}}' routerLink="/afficher-commande"
+          (click)="versVueCommande(commande)">
           <ion-item class="nom" slot="start">{{commande.nomClient}}</ion-item>
           <ion-item>{{commande.numeroCommande}}</ion-item>
           <ion-item>{{commande.dateCommande | date: 'dd MMMM yyyy'}}</ion-item>
         </ion-item>
-        <ion-item-options  side="start">
-          <ion-item-option *ngIf="!archive"  color="success" (click)="archiverCommande(commande,1,'warning')">
+        <ion-item-options side="start">
+          <ion-item-option *ngIf="!archive" color="success" (click)="archiverCommande(commande,1,'warning')">
             <ion-icon name="archive" slot="icon-only"></ion-icon>
           </ion-item-option>
           <ion-item-option *ngIf="archive" color="danger" (click)="archiverCommande(commande,0,'')">
@@ -43,11 +45,5 @@
         <ion-icon name="clipboard"></ion-icon>
       </ion-fab-button>
     </ion-item>
-
-     <!-- <ion-item-options side="end">
-      <ion-item-option color="success"></ion-item-option>
-    </ion-item-options> -->
-
-
   </ion-list>
 </ion-content>
