--- a/src/app/afficher-commande/afficher-commande.page.html
+++ b/src/app/afficher-commande/afficher-commande.page.html
@@ -10,27 +10,27 @@
 <ion-content>
   <form [formGroup]="form" novalidate>
     <ion-item>
-      <ion-label position="floating">Numéro de commande</ion-label>
-      <ion-textarea formControlName="numeroCommandeForm" type="text" inputmode="text"
-        (change)="numeroChange=true; estChange=true"></ion-textarea>
+      <ion-label position="floating">Numéro de commande : </ion-label>
+      <p></p>
+      <ion-input disabled='true'>{{commande.numeroCommande}}</ion-input>
     </ion-item>
     <ion-item (click)="choixClientModal()">
       <ion-label color='primary'>Changer de client</ion-label>
     </ion-item>
     <ion-item>
       <ion-label position="floating">Nom</ion-label>
-      <ion-textarea formControlName="nomClientForm" type="text" inputmode="text" (change)="estChange=true">
-      </ion-textarea>
+      <p></p>
+      <ion-input disabled='true'>{{commande.nomClient}}</ion-input>
     </ion-item>
     <ion-item>
       <ion-label position="floating">Pseudo</ion-label>
-      <ion-textarea formControlName='pseudoClientForm' type="text" inputmode="text" (change)="estChange=true">
-      </ion-textarea>
+      <p></p>
+      <ion-input disabled='true'>{{commande.pseudoClient}}</ion-input>
     </ion-item>
     <ion-item>
       <ion-label position="floating">Numéro de TVA</ion-label>
-      <ion-textarea formControlName='numeroTVAClientForm' type="text" inputmode="text" (change)="estChange=true">
-      </ion-textarea>
+      <p></p>
+      <ion-input disabled='true'>{{commande.numeroTVAClient}}</ion-input>
     </ion-item>
     <ion-item>
       <ion-label position="floating">Notes</ion-label>
@@ -151,7 +151,7 @@
     </ion-fab-button>
   </ion-fab>
   <ion-fab *ngIf="!archive" vertical="bottom" horizontal="end" slot="fixed">
-    <ion-fab-button color="success" (click)="UpdateCommande(commande,'Êtes-vous sûr de vouloir modifier le commande?')">
+    <ion-fab-button color="success" (click)="UpdateCommande()">
       <ion-icon name="save"></ion-icon>
     </ion-fab-button>
   </ion-fab>
